--- a/public/css/main.css
+++ b/public/css/main.css
@@ -326,7 +326,7 @@ Dashboard
 }
 .dashboardApp header .navbar{
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
 }
