--- a/public/css/main.css
+++ b/public/css/main.css
@@ -380,6 +380,26 @@ Dashboard
     padding: 25px;
     overflow-y: scroll;
 }
+
+.dashboardApp .dashboardContent > h3{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.dashboardApp .dashboardContent > h3 a{
+    padding: 10px 20px;
+    text-decoration: none;
+    font-size: 16px;
+    background: var(--color-primary);
+    color: var(--color-white);
+    border-radius: 10px;
+    transition: opacity .2s ease-in-out;
+}
+.dashboardApp .dashboardContent > h3 a:hover{
+    opacity: 0.7;
+}
+
 .dashboardApp .dashboardContent .cardList{
     display: flex;
     flex-direction: column;
@@ -586,6 +606,104 @@ Dashboard
     align-items: center;
 }
 .dashboardApp #modalEditarChamado form#formEditarChamado .btn button{
+    width: 100%;
+    max-width: 100px;
+    height: 40px;
+    outline: none;
+    cursor: pointer;
+    background-color: var(--color-primary);
+    color: var(--color-white);
+    border: none;
+    border-radius: 5px;
+}
+/* 
+
+========================
+MODAL CRIAR CHAMADO
+========================
+
+*/
+
+.dashboardApp #modalCriarChamado {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0,0,0,.5);
+}
+.dashboardApp #modalCriarChamado.enabled{
+    display: flex;
+}
+.dashboardApp #modalCriarChamado form#formCriarChamado {
+    background: var(--color-white);
+    position: relative;
+    padding: 25px;
+    border-radius: 10px;
+    box-shadow: 0 4px 18px -10px rgb(0 0 0 / 50%);
+    width: 95%;
+    height: 95%;
+    max-width: 600px;
+    max-height: 350px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /* grid-template-rows: auto auto auto auto; */
+    grid-template-areas:
+        "title title"
+        "input1 input2"
+        "input3 input4"
+        "button button"
+    ;
+    gap: 15px;
+}
+.dashboardApp #modalCriarChamado form#formCriarChamado > a {
+    position: absolute;
+    bottom: 25px;
+    left: 25px;
+    text-decoration: none;
+    color: var(--color-text);
+    opacity: 0.75;
+}
+.dashboardApp #modalCriarChamado form#formCriarChamado h3{
+    font-weight: 400;
+    font-size: 24px;
+    margin-bottom: 15px;
+    grid-area: title;
+}
+.dashboardApp #modalCriarChamado form#formCriarChamado .input-group {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+.dashboardApp #modalCriarChamado form#formCriarChamado .input-group input,
+.dashboardApp #modalCriarChamado form#formCriarChamado .input-group select{
+    padding: 10px;
+    outline: none;
+    width: 100%;
+    height: 40px;
+}
+.dashboardApp #modalCriarChamado form#formCriarChamado .input-group.casos{
+    grid-area: input1;
+}
+.dashboardApp #modalCriarChamado form#formCriarChamado .input-group.estados{
+    grid-area: input2;
+}
+.dashboardApp #modalCriarChamado form#formCriarChamado .input-group.local{
+    grid-area: input3;
+}
+.dashboardApp #modalCriarChamado form#formCriarChamado .input-group.data{
+    grid-area: input4;
+}
+.dashboardApp #modalCriarChamado form#formCriarChamado .btn{
+    grid-area: button;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.dashboardApp #modalCriarChamado form#formCriarChamado .btn button{
     width: 100%;
     max-width: 100px;
     height: 40px;
