--- a/public/css/main.css
+++ b/public/css/main.css
@@ -338,9 +338,12 @@ Dashboard
     grid-area: sidebar;
     background: var(--color-gray-regular);
     padding: 25px;
+    display: flex;
+    flex-direction: column;
 }
 .dashboardApp .sidebar form{
     margin-top: 25px;
+    flex: 1;
 }
 .dashboardApp .sidebar form .input-group{
     display: flex;
@@ -369,6 +372,26 @@ Dashboard
     color: var(--color-white);
     border: none;
     border-radius: 5px;
+}
+.dashboardApp .sidebar .config{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.dashboardApp .sidebar .config a{
+    width: 100%;
+    height: 40px;
+    background: var(--color-primary);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: var(--color-white);
+    border-radius: 10px;
+    transition: opacity .2s ease-in-out;
+}
+.dashboardApp .sidebar .config a:hover{
+    opacity: 0.7;
 }
 .dashboardApp .sidebar h3,
 .dashboardApp .dashboardContent > h3{
