--- a/views/login.hbs
+++ b/views/login.hbs
@@ -25,7 +25,7 @@
             <a href="/" class="back">Voltar</a>
             <h3>Entrar</h3>
             <div class="input-group">
-                <input type="text" name="user" placeholder="Digite seu e-mail" required>
+                <input type="text" name="user" placeholder="Digite seu usuário" required>
                 <div class="input-content">
                     <input type="password" name="pwd" placeholder="Digite sua senha" id="inputPassword">
                     <img src="/img/eye-slash-regular.svg" alt="" id="viewPasswordImg">
